--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           </li>
         </ul>
       </nav>
-      <a class="header__logo">
+      <a class="header__logo" href="#">
         <img
           src="./images/logo-black.svg"
           alt="Логотип Оно тебе надо"
@@ -155,7 +155,7 @@
       <address class="footer__address address">
         <a href="tel:+9995555555">+9 999 555 5555</a><br />
         <a href="mailto:info@sobaka.ge">info@sobaka.ge</a><br />
-        наб. Принсенграхт 263-<br />265, Амстердам
+        наб. Принсенграхт 263-265, Амстердам
       </address>
       <nav class="footer__menu">
         <ul class="footer__menu-list">
