--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <nav class="header__menu">
         <ul class="header__links-list">
           <li class="header__links-list-item header__links-list-item_no-bullet">
-            <a class="header__link header__link_active">главная</a>
+            <a class="header__link header__link_active" href="#">главная</a>
           </li>
           <li class="header__links-list-item">
             <a class="header__link" href="#lots">посмотреть лоты</a>
@@ -33,9 +33,9 @@
         />
       </a>
       <address class="header__address address">
-        <a href="tel:+9995555555">+9 999 555 5555</a><br />
-        <a href="mailto:info@sobaka.ge">info@sobaka.ge</a><br />
-        наб. Принсенграхт 263-<br />265, Амстердам
+        <p><a href="tel:+9995555555">+9 999 555 5555</a></p>
+        <p><a href="mailto:info@sobaka.ge">info@sobaka.ge</a></p>
+        <p>наб. Принсенграхт 263–<br />265, Амстердам</p>
       </address>
     </header>
 
@@ -50,11 +50,9 @@
           </span>
         </h1>
         <div class="cover__description">
-          <div class="cover__description-text-wrapper">
-            <p class="cover__description-text">
-              аукцион вещей, в которые никто не верил
-            </p>
-          </div>
+          <p class="cover__description-text">
+            аукцион вещей, в которые никто не верил
+          </p>
           <button type="button" class="bet-button">сделать ставку</button>
         </div>
       </section>
@@ -155,12 +153,14 @@
       <address class="footer__address address">
         <a href="tel:+9995555555">+9 999 555 5555</a><br />
         <a href="mailto:info@sobaka.ge">info@sobaka.ge</a><br />
-        наб. Принсенграхт 263-265, Амстердам
+        <p>наб. Принсенграхт 263-265, Амстердам</p>
       </address>
       <nav class="footer__menu">
         <ul class="footer__menu-list">
           <li class="footer__menu-list-item">
-            <a class="footer__menu-link footer__menu-link_active">главная</a>
+            <a class="footer__menu-link footer__menu-link_active" href="#"
+              >главная</a
+            >
           </li>
           <li class="footer__menu-list-item">
             <a class="footer__menu-link" href="#lots">посмотреть лоты</a>
