--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         />
       </a>
       <address class="header__address address">
-        <a href="tel:+9995555555">+9 999 555 5555</a>
-        <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <a href="tel:+9995555555">+9 999 555 5555</a><br />
+        <a href="mailto:info@sobaka.ge">info@sobaka.ge</a><br />
         <p>наб. Принсенграхт 263–<br />265, Амстердам</p>
       </address>
     </header>
